objects/LiveText__Exception__c.object
<CustomObject>
    <description>Exception</description>
    <fields>
        <fullName>LiveText__AssociatedUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated User</description>
        <label>AssociatedUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Exceptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LiveText__ErrorDescription__c</fullName>
        <description>Error Description</description>
        <label>ErrorDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LiveText__ObjectId__c</fullName>
        <description>Object Id.</description>
        <label>ObjectId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveText__Priority__c</fullName>
        <description>Priority</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <default>true</default>
                    <label>High</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LiveMessage Exception</label>
    <listViews>
        <fullName>LiveText__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LiveMessage Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>